make 'anyio' optional requirement.
'anyio' is only used in tests, so there is no need to require it in main
process.

Signed-off-by: cunshunxia <cunshunxia@tencent.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ classifiers = [
 dependencies = [
     "certifi",
     "httpcore==1.*",
-    "anyio",
     "idna",
     "sniffio",
 ]
@@ -54,6 +53,9 @@ socks = [
 ]
 zstd = [
   "zstandard>=0.18.0",
+]
+test = [
+    "anyio",
 ]
 
 [project.scripts]
